--- a/frontend/silverware/src/app/components/update/update.component.html
+++ b/frontend/silverware/src/app/components/update/update.component.html
@@ -24,7 +24,7 @@
         <br>
         <mat-form-field appearance="fill">
             <mat-label>Date of birth:</mat-label>
-            <input matInput [matDatepicker]="dp3" [max]="validations.presentDate" disabled>
+            <input matInput [matDatepicker]="dp3" [(ngModel)]="userDetails.svw_dob" [max]="validations.presentDate" disabled>
             <mat-datepicker-toggle matIconSuffix [for]="dp3"></mat-datepicker-toggle>
             <mat-datepicker #dp3 disabled="false"></mat-datepicker>
         </mat-form-field>
@@ -33,20 +33,20 @@
             <td>
                 <mat-form-field>
                 <mat-label>City:</mat-label>
-                <input matInput placeholder="Ex. Toronto">
+                <input matInput [(ngModel)]="userDetails.svw_city" placeholder="Ex. Toronto">
                 </mat-form-field></td>
             <td> 
                 <mat-form-field appearance="fill">
                     <mat-label>Province</mat-label>
-                    <select matNativeControl>
-                      <option *ngFor="let province of provinces" value="province.value">{{province.name}}</option>
+                    <select matNativeControl [(ngModel)]="userDetails.svw_province">
+                      <option *ngFor="let province of provinces" value="{{province.value}}">{{province.name}}</option>
                     </select>
                   </mat-form-field>
             </td>
             <td>
                 <mat-form-field>
                 <mat-label>Postal Code:</mat-label>
-                <input matInput #postalCode maxlength="6" placeholder="Ex. N2L3L2" value="">
+                <input matInput #postalCode maxlength="6" placeholder="Ex. N2L3L2" [(ngModel)]="userDetails.svw_postalcode">
                 <mat-hint align="end">{{postalCode.value.length}} / 6</mat-hint>
                 </mat-form-field>
             </td>
@@ -54,14 +54,15 @@
         <br>
         <mat-form-field hintLabel="Max 500 characters">
             <label> About me: </label>
-            <textarea maxlength="500" style="height: 200px" matInput #about></textarea>
+            <textarea [(ngModel)]="userDetails.svw_bio" maxlength="500" style="height: 200px" matInput #about></textarea>
             <mat-hint align="end">{{about.value?.length || 0}}/500</mat-hint>
         </mat-form-field>
         <mat-form-field hintLabel="Max 50 characters">
             <label> Address: </label>
-            <textarea maxlength="50" matInput #address></textarea>
+            <textarea [(ngModel)]="userDetails.svw_address" maxlength="50" matInput #address></textarea>
             <mat-hint align="end">{{address.value?.length || 0}}/50</mat-hint>
         </mat-form-field>
         <br>
+        <button mat-raised-button color="primary" (click)="userProfileUpdate()">Update Profile</button>
       </div>
   </div>
