--- a/frontend/silverware/src/app/components/update/update.component.html
+++ b/frontend/silverware/src/app/components/update/update.component.html
@@ -1,7 +1,6 @@
 <div class="update-container">
     <app-header></app-header>
     <br>
-
     <div class="container-data update-container" >
         <h4 style="text-align:center; font-weight:bold"> Silverware Profile </h4> 
         
@@ -9,60 +8,86 @@
             <img mat-card-image class="svw-profile-photo"
             style="width: 29%; text-align: center; margin: auto;" 
             *ngIf="userDetails.svw_photoUrl" src="{{userDetails.svw_photoUrl}}" alt="profile">
-            <br>
-          </mat-card>
-
+        </mat-card>
+        <br>
         <mat-form-field class="container-data" hintLabel="Max 50 characters">
             <mat-label>Name:</mat-label>
-            <input maxlength="50" [(ngModel)]="userDetails.svw_name"matInput placeholder="name">
+            <input maxlength="50" [(ngModel)]="userDetails.svw_name" [formControl]="requiredNamefield" matInput placeholder="name">
+            <mat-error *ngIf="requiredNamefield.invalid">{{getInvalidNameErrorMessage()}}</mat-error>
         </mat-form-field>
         <br>
-        <mat-form-field>
-            <mat-label>Email:</mat-label>
-            <input [(ngModel)]="userDetails.svw_email" matInput placeholder="Enter your email" disabled>
-        </mat-form-field>
-        <br>
-        <mat-form-field appearance="fill">
-            <mat-label>Date of birth:</mat-label>
-            <input matInput [matDatepicker]="dp3" [(ngModel)]="userDetails.svw_dob" [max]="validations.presentDate" disabled>
-            <mat-datepicker-toggle matIconSuffix [for]="dp3"></mat-datepicker-toggle>
-            <mat-datepicker #dp3 disabled="false"></mat-datepicker>
-        </mat-form-field>
+        <table  cellspacing="0">
+            <tr>
+                <td>
+                    <mat-form-field>
+                        <mat-label>Email:</mat-label>
+                        <input [(ngModel)]="userDetails.svw_email" matInput placeholder="Enter your email" disabled>
+                    </mat-form-field>
+                <td> 
+                    <mat-form-field>
+                        <span matPrefix>+1 &nbsp;</span>
+                        <mat-label>Phone:</mat-label>
+                        <input type="tel" [(ngModel)]="userDetails.svw_telephone"
+                         [formControl]="requiredPhonefield" matInput type="number">
+                        <mat-error *ngIf="requiredPhonefield.invalid">{{getInvalidPhoneErrorMessage()}}</mat-error>
+                    </mat-form-field>
+                </td>
+                <td> 
+                    <mat-form-field appearance="fill">
+                        <mat-label>Date of birth:</mat-label>
+                        <input matInput [matDatepicker]="dp3" [(ngModel)]="userDetails.svw_dob" [formControl]="requiredDobfield"
+                        [max]="validations.presentDate" >
+                        <mat-datepicker-toggle matIconSuffix [for]="dp3"></mat-datepicker-toggle>
+                        <mat-datepicker #dp3 disabled="false"></mat-datepicker>
+                        <mat-error *ngIf="requiredDobfield.invalid">{{getInvalidDobErrorMessage()}}</mat-error>
+                    </mat-form-field>
+                </td>
+            </tr>
+        </table>
         <br>
         <table  cellspacing="0"><tr>
             <td>
                 <mat-form-field>
                 <mat-label>City:</mat-label>
-                <input matInput [(ngModel)]="userDetails.svw_city" placeholder="Ex. Toronto">
+                <input matInput [(ngModel)]="userDetails.svw_city" placeholder="Ex. Toronto" [formControl]="requiredCityfield" >
+                <mat-error *ngIf="requiredCityfield.invalid">{{getInvalidCityErrorMessage()}}</mat-error>
                 </mat-form-field></td>
             <td> 
                 <mat-form-field appearance="fill">
                     <mat-label>Province</mat-label>
-                    <select matNativeControl [(ngModel)]="userDetails.svw_province">
+                    <select matNativeControl [(ngModel)]="userDetails.svw_province" [formControl]="requiredProvincefield">
                       <option *ngFor="let province of provinces" value="{{province.value}}">{{province.name}}</option>
                     </select>
+                    <mat-error *ngIf="requiredProvincefield.invalid">{{getInvalidProvinceErrorMessage()}}</mat-error>
                   </mat-form-field>
             </td>
             <td>
                 <mat-form-field>
                 <mat-label>Postal Code:</mat-label>
-                <input matInput #postalCode maxlength="6" placeholder="Ex. N2L3L2" [(ngModel)]="userDetails.svw_postalcode">
+                <input matInput #postalCode maxlength="6" placeholder="Ex. N2L3L2" 
+                [(ngModel)]="userDetails.svw_postalcode" [formControl]="requiredPostalcodefield">
                 <mat-hint align="end">{{postalCode.value.length}} / 6</mat-hint>
+                <mat-error *ngIf="requiredPostalcodefield.invalid">{{getInvalidPostalcodeErrorMessage()}}</mat-error>
                 </mat-form-field>
             </td>
           </tr></table>
         <br>
         <mat-form-field hintLabel="Max 500 characters">
-            <label> About me: </label>
-            <textarea [(ngModel)]="userDetails.svw_bio" maxlength="500" style="height: 200px" matInput #about></textarea>
+            <mat-label> About me: </mat-label>
+            <textarea [(ngModel)]="userDetails.svw_bio" maxlength="500" style="height: 200px" matInput 
+            #about [formControl]="requiredBiofield">
+            </textarea>
+            <mat-error *ngIf="requiredBiofield.invalid">{{getInvalidBioErrorMessage()}}</mat-error>
             <mat-hint align="end">{{about.value?.length || 0}}/500</mat-hint>
         </mat-form-field>
         <mat-form-field hintLabel="Max 50 characters">
-            <label> Address: </label>
-            <textarea [(ngModel)]="userDetails.svw_address" maxlength="50" matInput #address></textarea>
+            <mat-label> Address: </mat-label>
+            <textarea [(ngModel)]="userDetails.svw_address" maxlength="50" matInput #address [formControl]="requiredAddressfield">
+            </textarea>
+            <mat-error *ngIf="requiredAddressfield.invalid">{{getInvalidAddressErrorMessage()}}</mat-error>
             <mat-hint align="end">{{address.value?.length || 0}}/50</mat-hint>
         </mat-form-field>
         <br>
-        <button mat-raised-button color="primary" (click)="userProfileUpdate()">Update Profile</button>
+        <button mat-raised-button color="primary" style="width:150px;" (click)="userProfileUpdate()">Update Profile</button>
       </div>
   </div>
