--- a/frontend/silverware/src/app/components/dashboard/dashboard.component.html
+++ b/frontend/silverware/src/app/components/dashboard/dashboard.component.html
@@ -1,21 +1,71 @@
 
  <app-header></app-header>
- <mat-card *ngIf="userDetails.svw_firebaseid" class="svw-card">
+ <br>
+  <mat-card *ngIf="userDetails.svw_firebaseid" class="svw-card">
     <mat-card-header>
-      <div mat-card-avatar style="background-image:url({{userDetails.svw_photoUrl}}); margin-top: 7px;"></div>
-      <mat-card-title style="padding-top: 16px;margin-right: 62px;">{{userDetails.svw_name}}</mat-card-title>
-      <mat-card-actions >
-        <button mat-icon-button class="svw-icon logout-icon" aria-label="Edit Profile" (click)="userUpdate()">
+      <mat-card-title-group>
+        <mat-card-title>{{userDetails.svw_name}}</mat-card-title>
+        <mat-card-subtitle>
+          <!-- <button mat-icon-button class="svw-icon logout-icon" aria-label="Edit Profile" (click)="userUpdate()">
             <mat-icon style="text-align: right;">rule</mat-icon>
-          </button>
-    </mat-card-actions>
+          </button> -->
+          <table  *ngIf="userDetails.svw_address" cellspacing="0">
+            <tr>
+                <td>
+                  <mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="home"> </mat-icon> 
+                </td>
+                <td> 
+                  {{userDetails.svw_address}} {{userDetails.svw_city}} {{userDetails.svw_province}} {{userDetails.svw_postalcode}}
+                </td>
+            </table>
+            <table *ngIf="userDetails.svw_telephone" cellspacing="0">
+              <tr>
+                  <td>
+                    <mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="call"> </mat-icon> 
+                  </td>
+                  <td> 
+                    +1-{{userDetails.svw_telephone}}
+                  </td>
+            </table>
+            <table *ngIf="userDetails.svw_email" cellspacing="0">
+              <tr>
+                  <td>
+                    <mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="mail"> </mat-icon> 
+                  </td>
+                  <td> 
+                    <a href="mailto:{{userDetails.svw_email}}">{{userDetails.svw_email}}</a>
+                  </td>
+            </table>
+            <table *ngIf="userDetails.svw_dob" cellspacing="0">
+              <tr>
+                  <td>
+                    <mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="cake"> </mat-icon> 
+                  </td>
+                  <td> 
+                     {{userDetails.svw_dob | date:'yyyy-MM-dd'}}
+                  </td>
+            </table>
+        </mat-card-subtitle>
+        <img mat-card-md-image src="{{userDetails.svw_photoUrl}}" >
+      </mat-card-title-group>
     </mat-card-header>
-    <img mat-card-image *ngIf="userDetails.svw_photoUrl" src="{{userDetails.svw_photoUrl}}" alt="profile">
     <br>
-    <mat-card-content style="text-align: center;">
-      <p>
-        <span style="font-weight: bold;text-align: center;">Email: {{userDetails.svw_email}}</span>
-      </p>
+    <mat-card-content>
+       {{userDetails.svw_bio}}
     </mat-card-content>
+    <br>
+    <table style="text-align: center;" cellspacing="0">
+            <tr>
+                <td> 
+                    <button mat-raised-button color="primary" style="width:150px;" (click)="userUpdate()">Update Profile</button>
+                </td>
+            </tr>
+    </table>
+    <br>
   </mat-card>
+
+  <svg id="clouds" xmlns="http://www.w3.org/2000/svg" width="2611.084" height="485.677" viewBox="0 0 2611.084 485.677">
+    <title>Gray Clouds Background</title>
+    <path id="Path_39" data-name="Path 39" d="M2379.709,863.793c10-93-77-171-168-149-52-114-225-105-264,15-75,3-140,59-152,133-30,2.83-66.725,9.829-93.5,26.25-26.771-16.421-63.5-23.42-93.5-26.25-12-74-77-130-152-133-39-120-212-129-264-15-54.084-13.075-106.753,9.173-138.488,48.9-31.734-39.726-84.4-61.974-138.487-48.9-52-114-225-105-264,15a162.027,162.027,0,0,0-103.147,43.044c-30.633-45.365-87.1-72.091-145.206-58.044-52-114-225-105-264,15-75,3-140,59-152,133-53,5-127,23-130,83-2,42,35,72,70,86,49,20,106,18,157,5a165.625,165.625,0,0,0,120,0c47,94,178,113,251,33,61.112,8.015,113.854-5.72,150.492-29.764a165.62,165.62,0,0,0,110.861-3.236c47,94,178,113,251,33,31.385,4.116,60.563,2.495,86.487-3.311,25.924,5.806,55.1,7.427,86.488,3.311,73,80,204,61,251-33a165.625,165.625,0,0,0,120,0c51,13,108,15,157-5a147.188,147.188,0,0,0,33.5-18.694,147.217,147.217,0,0,0,33.5,18.694c49,20,106,18,157,5a165.625,165.625,0,0,0,120,0c47,94,178,113,251,33C2446.709,1093.793,2554.709,922.793,2379.709,863.793Z" transform="translate(142.69 -634.312)" fill="#eee"/>
+  </svg>
  
