change signin label

--- a/frontend/silverware/src/app/components/home/home.component.html
+++ b/frontend/silverware/src/app/components/home/home.component.html
@@ -17,7 +17,7 @@
   
       <span>
         <button mat-button color="primary" class="login-with-google-btn" (click)="login()">
-          Sign in with Google
+          Sign in
         </button>
       </span>
         
