Update in app name and documentation

--- a/frontend/silverware/src/app/components/home/home.component.html
+++ b/frontend/silverware/src/app/components/home/home.component.html
@@ -12,11 +12,11 @@
       </svg>
   
       <span>
-        {{ title }} Profile App
+        {{ title }}
       </span>
   
       <span>
-        <button mat-button color="primary" class="login-with-google-btn" (click)="login()">
+        <button mat-button color="primary" style="width:115px" class="login-with-google-btn" (click)="login()">
           Sign in
         </button>
       </span>
